--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 }
 body {
   font-family: "Courier New", Courier, monospace;
+  font-size: 1.8rem;
   background-color: #1a2b33;
   padding: 0 0.3rem;
   text-align: center;
@@ -130,9 +131,7 @@ footer {
 a:link {
   font-size: 2.3rem;
 }
-.ico {
-  color: rgb(0, 110, 255);
-}
+
 @media (max-width: 600px) {
   html {
     font-size: 50%;
